# cmake_tutorial

hello/: CMakeLists.txt  hello.c
pythagoras/: CMakeLists.txt  main.c  pythagoras.c  pythagoras.h
